--- a/clients/node/package.json
+++ b/clients/node/package.json
@@ -1,6 +1,6 @@
 {
     "name": "worka",
-    "version": "",
+    "version": "0.0.2",
     "description": "NodeJS client for worka",
     "repository": {
         "type": "git",
@@ -14,7 +14,7 @@
         "test": "npm run build && node dist/client.js"
     },
     "author": "OpenAPI-Generator Contributors",
-    "license": "Unlicense",
+    "license": "MIT",
     "dependencies": {
         "bluebird": "^3.7.2",
         "request": "^2.88.2"
