--- a/clients/node/package.json
+++ b/clients/node/package.json
@@ -1,10 +1,10 @@
 {
     "name": "@worka-ai/worka",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "NodeJS client for worka",
     "repository": {
         "type": "git",
-        "url": "https://github.com/GIT_USER_ID/GIT_REPO_ID.git"
+        "url": "git+https://github.com/worka-ai/ais.git"
     },
     "main": "dist/api.js",
     "types": "dist/api.d.ts",
@@ -24,5 +24,15 @@
         "@types/node": "^12",
         "@types/request": "^2.48.8",
         "typescript": "^4.0 || ^5.0"
-    }
+    },
+    "keywords": [
+        "ai",
+        "worka",
+        "llm",
+        "orchestration"
+    ],
+    "bugs": {
+        "url": "https://github.com/worka-ai/ais/issues"
+    },
+    "homepage": "https://github.com/worka-ai/ais#readme"
 }
