--- a/clients/node/package.json
+++ b/clients/node/package.json
@@ -34,5 +34,5 @@
     "bugs": {
         "url": "https://github.com/worka-ai/ais/issues"
     },
-    "homepage": "https://github.com/worka-ai/ais#readme"
+    "homepage": "https://worka.ai/dev.html"
 }
